spring-boot-demo 1. errorpage。 2. 没有使用自定义的HandlerExceptionResolver的时候直接配置一个/static/error/"statusCode".html这样一个文件，会自动根据状态码找到那个errorPage进行返回。"5XX.html"表示匹配所有的500错误 3. 使用自定义的HandlerExceptionResolver的时候就是自己想怎么做就怎么做了。

--- a/spring-boot-demo/src/main/resources/public/index.html
+++ b/spring-boot-demo/src/main/resources/public/index.html
@@ -49,7 +49,7 @@
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">John Home</h1>
 			<h3 id="welcome" class="h3_home wow fadeIn" data-wow-delay="0.6s"></h3>
-			<div align="center">
+			<div align="left">
 				<select id="animal" style="color: #ffffff;background-color: #2a7aaf">
 					<option value="person">人类</option>
 					<option value="cat">猫</option>
