spring-boot-demo 1. CRUD完成 2. 抽取异常使用@RestControllerAdvice或者@RestController中在方法上加@ExceptionHandler注解进行异常处理，这种方法会覆盖之前用的通过实现HandlerExceptionResolver的方式

--- a/spring-boot-demo/src/main/resources/public/index.html
+++ b/spring-boot-demo/src/main/resources/public/index.html
@@ -64,7 +64,11 @@
         <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">John Home</h1>
         <h3 id="welcome" class="h3_home wow fadeIn" data-wow-delay="0.6s"></h3>
         <ul class="list-inline intro-social-buttons">
-            <li><a href="add.html" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Add New Car</span></a>
+            <li>
+                <a href="edit.html" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Add New Car</span></a>
+            </li>
+            <li>
+                <a href="list.html" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">车辆信息</span></a>
             </li>
         </ul>
 
