--- a/spring-boot-demo/src/main/resources/public/edit.html
+++ b/spring-boot-demo/src/main/resources/public/edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>新增Car</title>
+    <title>车辆编辑</title>
     <script src="js/jquery-1.10.2.js"></script>
 </head>
 <body>
@@ -77,7 +77,7 @@
                 }
             }
 
-            $.get(url, callback);
+            $.post(url, null, callback);
         }
     });
 </script>
