--- a/spring-boot-demo/src/main/resources/public/list.html
+++ b/spring-boot-demo/src/main/resources/public/list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>新增Car</title>
+    <title>车辆信息</title>
     <script src="js/jquery-1.10.2.js"></script>
 </head>
 <body>
@@ -12,29 +12,68 @@
         <form id="carForm">
             <table id="carTable">
                 <tr>
-                    <td >车型</td>
-                    <td>描述</td>
+                    <td style="background-color: #7a58b9;text-align: center" width="200px"><span style="font-family: 华文隶书;font-size: 20px;">车型</span></td>
+                    <td style="background-color: #7a58b9;text-align: center" width="200px" ><span style="font-family: 华文隶书;font-size: 20px">描述</span></td>
+                    <td style="background-color: #7a58b9;text-align: center" width="200px" ><span style="font-family: 华文隶书;font-size: 20px">操作</span></td>
                 </tr>
             </table>
 
         </form>
     </div>
     <a href="index.html" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">主页面</span></a>
+    <a href="edit.html" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Add New Car</span></a>
+
+
 </div>
 
 <script>
-    var url = "/car/listAll";
-    var callback = function (result) {
-        if (result.data != null) {
-            for (i in result.data) {
-                var car = result.data[i];
-                var html = "";
-                html += "<tr><td>" + car.carType + "</td><td>" + car.desc + "</td></tr>";
-                $(html).appendTo("#carTable");
+    /**
+     *  初始化页面，加载所有car
+     */
+    $(function () {
+        var url = "/car/listAll";
+        var callback = function (result) {
+            if (result.data != null) {
+                for (i in result.data) {
+                    var car = result.data[i];
+                    var html = "";
+                    var updateButton = "<a href=\"javascript:updateOne(" + car.id + ")\" class=\"btn  btn-lg mybutton_standard wow swing wow fadeIn\" data-wow-delay=\"1.2s\"><span class=\"network-name\">修改</span></a>";
+                    var deleteButton= "<a href=\"javascript:deleteOne(" + car.id +  ")\" class=\"btn  btn-lg mybutton_standard wow swing wow fadeIn\" data-wow-delay=\"1.2s\"><span class=\"network-name\">删除</span></a>";
+                    html += "<tr style=\"text-align: center\" width=\"200px\"><td>" + car.carType + "</td><td>" + car.desc + "</td><td>" + updateButton + deleteButton+ "</td></tr>";
+                    $(html).appendTo("#carTable");
+                }
             }
         }
+        $.get(url, callback);
+    })
+
+    /**
+     *  根据id更新一个Car，跳转到edit.html页面进行编辑
+     * @param id
+     */
+    var updateOne = function (id) {
+        location.href = "edit.html?id=" + id;
     }
-    $.get(url, callback);
+
+
+    /**
+     * 根据id删除一个Car
+     * @param id
+     */
+    var deleteOne = function (id) {
+        if(confirm("您真的要删除该项吗？")){
+            var url = "/car/deleteOne";
+            var data = {id:id};
+            var callback = function(response){
+                if(response.successful){
+                    location.reload(true);
+                }else{
+                    alert(response.msg);
+                }
+            }
+            $.post(url, data, callback);
+        }
+    }
 </script>
 
 
@@ -77,12 +116,6 @@
 <script src="js/uiMorphingButton_inflow.js"></script>
 <!-- Magnific Popup core JS file -->
 <script src="js/jquery.magnific-popup.js"></script>
-<script>
-    $("#submitForm").click(function () {
-        var url = "/car/add";
-        $("#carForm")
-    });
-</script>
 
 </body>
 </html>
